--- a/start/templates/account/base.html
+++ b/start/templates/account/base.html
@@ -38,6 +38,8 @@
     <title>Kawaitree</title>
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+{#bootstrap icons#}
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
 </head>
 <body>
 <div class="container-fluid noir no-padl">
