--- a/start/templates/socialaccount/authentication_error.html
+++ b/start/templates/socialaccount/authentication_error.html
@@ -8,4 +8,6 @@
 <h1>{% trans "Social Network Login Failure" %}</h1>
 
 <p>{% trans "An error occurred while attempting to login via your social network account." %}</p>
+<p>Code: {{ auth_error.code }}, Error: {{ auth_error.exception }}</p>
+<button class="btn btn-outline-info btn-sm mt-2" onclick="history.back()"><i class="bi bi-arrow-left display-6"></i></button>
 {% endblock %}
