--- a/start/templates/account/base.html
+++ b/start/templates/account/base.html
@@ -41,7 +41,7 @@
 {#bootstrap icons#}
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
 </head>
-<body>
+<body style="padding-top: 0">
 <div class="container-fluid noir no-padl">
   <div class="row row-cols-auto">
     <div class="col">
