--- a/core/templates/core/tree_detail.html
+++ b/core/templates/core/tree_detail.html
@@ -1,7 +1,9 @@
 {% extends "core/base.html" %}
 {% load i18n %}
+{% load static %}
 {% block content %}
 {% load socialaccount %}
+
 <div class="container" xmlns="http://www.w3.org/1999/html">
     <h1 class="mt-3">{% trans 'Detail' %}</h1>
     <div class="card text-white bg-secondary mb-3" style="max-width: 60rem;">
@@ -36,14 +38,36 @@
           </div>
         </div>
         <div class="row mt-2 mb-2">
-        {% for photo in page_obj %}
-          <div class="col mt-2 mb-2">
-              <a href="{% url 'photo-detail' photo.pk %}"><img src="{{ photo.thumb.url }}" class="autoresizeimg2"></a>
+    {% if page_obj %}
+        <section class="slider-section">
+          <div id="carousel" class="carousel slide pointer-event" data-bs-ride="carousel" data-bs-touch="true">
+              <div class="carousel-controls">
+                  <ol class="carousel-indicators">
+                      {% for photo in page_obj %}
+                      <li data-bs-target="#carousel" data-bs-slide-to="{{ forloop.counter|add:-1 }}" {% if forloop.counter == 1 %}class="active" aria-current="true" {% endif %}style="background-image:url('{{ photo.thumb.url }}')"></li>
+                      {% endfor %}
+
+                </ol>
+                <a class="carousel-control-prev" href="#carousel" role="button" data-bs-slide="prev">
+                 <img src="{% static 'img/left-arrow.svg' %}" alt="Prev">
+              </a>
+              <a class="carousel-control-next" href="#carousel" role="button" data-bs-slide="next">
+                <img src="{% static 'img/right-arrow.svg' %}" alt="Next">
+              </a>
+
+              </div>
+              <div class="carousel-inner">
+                  {% for photo in page_obj %}
+                    <div class="carousel-item {% if forloop.counter == 1 %}active{% endif %}" style="background-image:url('{{  photo.picture.url }}')">
+                            <a href="{% url 'photo-detail' photo.pk %}"><i class="bi bi-search"></i></a>
+                    </div>
+                  {% endfor %}
           </div>
-        {% endfor%}
         </div>
+        </section>
+
         <div class="pagination">
-            <span class="step-links">
+            <span class="step-links mt-2">
             {% if page_obj.has_previous %}
                 <a href="?page=1" class="btn btn-sm btn-outline-info mb-4"><i class="bi bi-skip-backward display-6"></i></a>
                 <a href="?page={{ page_obj.previous_page_number }}" class="btn btn-sm btn-outline-info mb-4"><i class="bi bi-caret-left display-6"></i></a>
@@ -61,6 +85,9 @@
             {% endif %}
             </span>
         </div>
+    {% endif %}
+        </div>
+
         {% if request.user == tree.ownerfk %}
         <div class="row mt-2 mb-2">
           <div class="col">
@@ -70,6 +97,7 @@
         {% endif %}
         {% if request.user == tree.ownerfk %}
             {% if tasks %}
+            <div class="table-responsive-sm">
             <table class="table table-dark mt-2">
                 <thead>
                   <tr>
@@ -116,6 +144,7 @@
                   {% endfor %}
                 </tbody>
               </table>
+            </div>
             {% endif %}
           <a href="{% url 'task-create' tree.id %}" class="btn btn-outline-success btn-sm mt-1" role="button" ><i class="bi bi-plus-circle display-6"></i> <i class="bi bi-scissors display-6"></i></a><br>
           {% endif %}
