--- a/core/templates/core/tree_confirm_delete.html
+++ b/core/templates/core/tree_confirm_delete.html
@@ -6,12 +6,12 @@
   <form method="post">
     {% csrf_token %}
     <fieldset class="form-group">
-      <legend class="border-bottom mp-4">{% trans 'Delete tree' %}</legend>
+      <legend class="border-bottom mt-4">{% trans 'Delete tree' %}</legend>
       <h2>{% trans 'Are you sure you want to delete the tree'%} "{{object.tname}}"</h2>
     </fieldset>
     <div class="form-group">
       <button class="btn btn-outline-danger btn-sm mt-2" type="submit"><i class="bi bi-trash3 display-6"></i> {% trans 'Yes delete' %}</button>
-      <button class="btn btn-outline-info btn-sm mt-2" onclick="history.back()"><i class="bi bi-arrow-left display-6"></i></button>
+      <button class="btn btn-outline-info btn-sm mt-2" onclick="history.back()" type="button"><i class="bi bi-arrow-left display-6"></i></button>
     </div>
   </form>
 </div>
