--- a/core/templates/core/tdb.html
+++ b/core/templates/core/tdb.html
@@ -16,6 +16,7 @@
         </h2>
         <div id="collapseoverduetasks" class="accordion-collapse collapse" aria-labelledby="heading overduetasks" data-bs-parent="#accordionoverduetasks">
           <div class="accordion-body">
+          <div class="table-responsive-sm">
             <table class="table table-dark mt-2">
               <thead>
                 <tr>
@@ -53,6 +54,7 @@
               </tbody>
             </table>
           </div>
+          </div>
         </div>
       </div>
     </div>
@@ -72,6 +74,7 @@
         </h2>
         <div id="collapsenexttasks" class="accordion-collapse collapse" aria-labelledby="heading nexttasks" data-bs-parent="#accordionnexttasks">
           <div class="accordion-body">
+          <div class="table-responsive-sm">
             <table class="table table-dark mt-2">
               <thead>
                 <tr>
@@ -108,6 +111,7 @@
                 {% endfor %}
               </tbody>
             </table>
+          </div>
           </div>
         </div>
       </div>
@@ -153,6 +157,7 @@
               <img src="{{ tree.treePic.url }}" class="autoresizeimg" alt="Tree Picture">
             </div>
           </div>
+          <div class="table-responsive-sm">
           <table class="table table-dark mt-2">
             <thead>
               <tr>
@@ -187,6 +192,7 @@
               {% endfor %}
             </tbody>
           </table>
+          </div>
           <a href="{% url 'task-create' tree.id %}" class="btn btn-outline-success btn-sm mt-1" role="button" ><i class="bi bi-plus-circle display-6"></i> <i class="bi bi-scissors display-6"></i></a>
 
         </div>
