--- a/users/templates/users/User_confirm_delete.html
+++ b/users/templates/users/User_confirm_delete.html
@@ -6,7 +6,7 @@
   <form method="post">
     {% csrf_token %}
     <fieldset class="form-group">
-      <legend class="border-bottom mp-4">{% trans 'Delete your account' %}</legend>
+      <legend class="border-bottom mt-4">{% trans 'Delete your account' %}</legend>
       <h2>{% trans 'Are you sure you want to delete your account?'%}</h2>
       <div class="alert alert-dismissible alert-danger">
         <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
@@ -16,7 +16,7 @@
     </fieldset>
     <div class="form-group">
       <button class="btn btn-outline-danger btn-sm mt-2" type="submit"><i class="bi bi-trash3 display-6"></i> {% trans 'Yes delete' %}</button>
-      <button class="btn btn-outline-info btn-sm mt-2" onclick="history.back()"><i class="bi bi-arrow-left display-6"></i></button>
+      <button class="btn btn-outline-info btn-sm mt-2" onclick="history.back()" type="button"><i class="bi bi-arrow-left display-6"></i></button>
     </div>
   </form>
 </div>
