fixing bug back type="button" on every page

--- a/core/templates/core/calendar.html
+++ b/core/templates/core/calendar.html
@@ -62,7 +62,7 @@
 			</div>
 		</div>
 	</section>
-<button class="btn btn-outline-info btn-sm mt-2" onclick="history.back()"><i class="bi bi-arrow-left display-6"></i></button>
+<button class="btn btn-outline-info btn-sm mt-2" onclick="history.back()" type="button"><i class="bi bi-arrow-left display-6"></i></button>
 	<script src="{% static 'js/jquery.min.js' %}"></script>
   <script src="{% static 'js/popper.js' %}"></script>
 {#  <script src="js/bootstrap.min.js"></script>#}
