--- a/core/templates/core/task_detail.html
+++ b/core/templates/core/task_detail.html
@@ -58,7 +58,7 @@
             {% if request.user == task.treefk.ownerfk %}
                 <a href="{% url 'photo-create' task.treefk.id task.id %}" class="btn btn-outline-success btn-sm mt-1" role="button" ><i class="bi bi-plus-circle display-6"></i> <i class="bi bi-camera display-6"></i></a><br>
             {% endif %}
-        <button class="btn btn-outline-info btn-sm mt-2" onclick="history.back()"><i class="bi bi-arrow-left display-6"></i></button>
+        <button class="btn btn-outline-info btn-sm mt-2" onclick="history.back()" type="button"><i class="bi bi-arrow-left display-6"></i></button>
           </div>
         </div>
       </div>
