--- a/core/templates/core/instant_task.html
+++ b/core/templates/core/instant_task.html
@@ -26,7 +26,7 @@
     </fieldset>
     <div class="form-group">
       <button class="btn btn-outline-success btn-sm" type="submit"><i class="bi bi-check display-6"></i></button>
-      <button class="btn btn-outline-info btn-sm" onclick="history.back()"><i class="bi bi-x display-6"></i></button>
+      <button class="btn btn-outline-info btn-sm" onclick="history.back()" type="button"><i class="bi bi-x display-6"></i></button>
     </div>
   </form>
 </div>
