--- a/core/templates/core/photo_detail.html
+++ b/core/templates/core/photo_detail.html
@@ -34,7 +34,7 @@
               <a href="javascript:history.back()"><img src="{{ object.picture.url }}" class="autoresizeimg" alt="Picture"></a>
           </div>
         </div>
-        <button class="btn btn-outline-info btn-sm mt-2" onclick="history.back()"><i class="bi bi-arrow-left display-6"></i></button>
+        <button class="btn btn-outline-info btn-sm mt-2" onclick="history.back()" type="button"><i class="bi bi-arrow-left display-6"></i></button>
             {% if request.user == object.treefk.ownerfk %}
 
                 <a href="{% url 'photo-delete' photo.id %}" class="btn btn-outline-danger btn-sm mt-2" role="button" ><i class="bi bi-trash3  display-6"></i></a>
