--- a/core/templates/core/photo_list.html
+++ b/core/templates/core/photo_list.html
@@ -57,6 +57,6 @@
             </span>
         </div>
     {% endif %}
-<button class="btn btn-outline-info btn-sm mt-2" onclick="history.back()"><i class="bi bi-arrow-left display-6"></i></button>
+<button class="btn btn-outline-info btn-sm mt-2" onclick="history.back()" type="button"><i class="bi bi-arrow-left display-6"></i></button>
 </div>
 {% endblock content%}
