--- a/core/templates/core/photo_listall.html
+++ b/core/templates/core/photo_listall.html
@@ -77,7 +77,7 @@
 
   </form>
 
-<button class="btn btn-outline-info btn-sm mt-2" onclick="history.back()"><i class="bi bi-arrow-left display-6"></i></button>
+<button class="btn btn-outline-info btn-sm mt-2" onclick="history.back()" type="button"><i class="bi bi-arrow-left display-6"></i></button>
 </div>
 
 {% endblock content%}
