--- a/core/templates/core/tasks.html
+++ b/core/templates/core/tasks.html
@@ -61,6 +61,6 @@
     {% else %}
     <i>{% trans 'No task to display' %}</i><br>
     {% endif %}
-<button class="btn btn-outline-info btn-sm mt-2" onclick="history.back()"><i class="bi bi-arrow-left display-6"></i></button>
+<button class="btn btn-outline-info btn-sm mt-2" onclick="history.back()" type="button"><i class="bi bi-arrow-left display-6"></i></button>
 </div>
 {% endblock content%}
