--- a/core/templates/core/tree_detail.html
+++ b/core/templates/core/tree_detail.html
@@ -148,7 +148,7 @@
             {% endif %}
           <a href="{% url 'task-create' tree.id %}" class="btn btn-outline-success btn-sm mt-1" role="button" ><i class="bi bi-plus-circle display-6"></i> <i class="bi bi-scissors display-6"></i></a><br>
           {% endif %}
-        <button class="btn btn-outline-info btn-sm mt-2" onclick="history.back()"><i class="bi bi-arrow-left display-6"></i></button>
+        <button class="btn btn-outline-info btn-sm mt-2" onclick="history.back()" type="button"><i class="bi bi-arrow-left display-6"></i></button>
       </div>
     </div>
 </div>
