--- a/start/templates/socialaccount/authentication_error.html
+++ b/start/templates/socialaccount/authentication_error.html
@@ -9,5 +9,5 @@
 
 <p>{% trans "An error occurred while attempting to login via your social network account." %}</p>
 <p>Code: {{ auth_error.code }}, Error: {{ auth_error.exception }}</p>
-<button class="btn btn-outline-info btn-sm mt-2" onclick="history.back()"><i class="bi bi-arrow-left display-6"></i></button>
+<button class="btn btn-outline-info btn-sm mt-2" onclick="history.back()" type="button"><i class="bi bi-arrow-left display-6"></i></button>
 {% endblock %}
