--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -107,7 +107,7 @@
             </div>
             <div class="form-row">
                 <button class="btn btn-outline-success btn-sm" type="submit"><i class="bi bi-check display-6"></i></button>
-                <button class="btn btn-outline-info btn-sm" onclick="history.back()"><i class="bi bi-x display-6"></i></button>
+                <button class="btn btn-outline-info btn-sm" onclick="history.back()" type="button"><i class="bi bi-x display-6"></i></button>
                 <a href="{% url 'user-delete' user.id %}" class="btn btn-outline-danger btn-sm" type="Delete"><i class="bi bi-trash3  display-6"></i></a>
             </div>
          </fieldset>
