--- a/users/templates/users/public_profile.html
+++ b/users/templates/users/public_profile.html
@@ -109,7 +109,7 @@
                 </span>
             </div>
         {% endif %}
-    <button class="btn btn-outline-info btn-sm mt-2" onclick="history.back()"><i class="bi bi-arrow-left display-6"></i></button>
+    <button class="btn btn-outline-info btn-sm mt-2" onclick="history.back()" type="button"><i class="bi bi-arrow-left display-6"></i></button>
     </div>
 <script>
     var juser = {
