--- a/users/templates/users/weather.html
+++ b/users/templates/users/weather.html
@@ -69,6 +69,6 @@
         </p>
       </div>
     {% endif %}
-  <button class="btn btn-outline-info btn-sm mt-2" onclick="history.back()"><i class="bi bi-arrow-left display-6"></i></button>
+  <button class="btn btn-outline-info btn-sm mt-2" onclick="history.back()" type="button"><i class="bi bi-arrow-left display-6"></i></button>
   </div>
 {% endblock content%}
