--- a/core/templates/core/tree_form.html
+++ b/core/templates/core/tree_form.html
@@ -8,7 +8,7 @@
   <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     <fieldset class="form-group">
-      <legend class="border-bottom mp-4">{% trans 'Tree' %}</legend>
+      <legend class="border-bottom mt-4">{% trans 'Tree' %}</legend>
       <div class="row">
         <div class="col-xl">
           {{ form.tname|as_crispy_field }}
